# Python_WEB_DZ_4-

./: README.md  main.py  pylint_text.txt  pyproject.toml  requirements.txt  text_file.json
